update gcp vertex gemini notebook

--- a/recipes/supervised_fine_tuning/gcp-vertex-gemini/gcp_vertex_gemini.ipynb
+++ b/recipes/supervised_fine_tuning/gcp-vertex-gemini/gcp_vertex_gemini.ipynb
@@ -27,6 +27,7 @@
     "To get started:\n",
     "\n",
     "- Set the `TENSORZERO_CLICKHOUSE_URL` environment variable. For example: `TENSORZERO_CLICKHOUSE_URL=\"http://chuser:chpassword@localhost:8123/tensorzero\"`\n",
+    "- Set the `GCP_VERTEX_CREDENTIALS_PATH`, `GCP_PROJECT_ID`, `GCP_LOCATION`, and `GCP_BUCKET_NAME` environment variables.\n",
     "- Create local authentication credentials `gcloud auth application-default login`\n",
     "- You may need to [Create a Bucket](https://cloud.google.com/storage/docs/creating-buckets) on GCP, if you do not already have one.\n",
     "- Update the following parameters:\n"
@@ -38,11 +39,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CONFIG_PATH = \"../../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
+    "CONFIG_PATH = \"../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
     "\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
     "\n",
-    "METRIC_NAME = \"exact_match\"\n",
+    "METRIC_NAME = \"jaccard_similarity\"\n",
     "\n",
     "# The name of the variant to use to grab the templates used for fine-tuning\n",
     "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"\n",
@@ -57,12 +58,21 @@
     "MAX_SAMPLES = 100_000\n",
     "\n",
     "# The name of the model to fine-tune (supported models: https://cloud.google.com/vertex-ai/generative-ai/docs/models/gemini-supervised-tuning)\n",
-    "MODEL_NAME = \"gemini-2.0-flash-lite-001\"\n",
+    "MODEL_NAME = \"gemini-2.0-flash-lite-001\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
     "\n",
-    "# Google Cloud Variables\n",
-    "PROJECT_ID = \"<your-project-id>\"\n",
-    "LOCATION = \"<your-region>\"  # e.g. us-central1\n",
-    "BUCKET_NAME = \"<your-bucket-name>\""
+    "tensorzero_path = os.path.abspath(os.path.join(os.getcwd(), \"../../../\"))\n",
+    "if tensorzero_path not in sys.path:\n",
+    "    sys.path.append(tensorzero_path)"
    ]
   },
   {
@@ -72,14 +82,11 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import os\n",
     "import tempfile\n",
     "import time\n",
     "import warnings\n",
     "from typing import Any, Dict, List, Optional\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import toml\n",
     "import vertexai\n",
     "from google.cloud import storage\n",
@@ -95,7 +102,9 @@
     "    ToolResult,\n",
     ")\n",
     "from tensorzero.util import uuid7\n",
-    "from vertexai.tuning import sft"
+    "from vertexai.tuning import sft\n",
+    "\n",
+    "from recipes.util import train_val_split"
    ]
   },
   {
@@ -111,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertexai.init(project=PROJECT_ID, location=LOCATION)"
+    "vertexai.init(project=os.environ[\"GCP_PROJECT_ID\"], location=os.environ[\"GCP_LOCATION\"])"
    ]
   },
   {
@@ -153,6 +162,7 @@
     "    value=FLOAT_METRIC_THRESHOLD,\n",
     "    comparison_operator=comparison_operator,\n",
     ")\n",
+    "# from tensorzero import BooleanMetricFilter\n",
     "# metric_node = BooleanMetricFilter(\n",
     "#     metric_name=METRIC_NAME,\n",
     "#     value=True  # or False\n",
@@ -196,9 +206,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rendered_inferences = tensorzero_client.experimental_render_inferences(\n",
+    "rendered_samples = tensorzero_client.experimental_render_inferences(\n",
     "    stored_inferences=stored_inferences,\n",
     "    variants={FUNCTION_NAME: TEMPLATE_VARIANT_NAME},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split the data into training and validation sets for fine-tuning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_samples, val_samples = train_val_split(\n",
+    "    rendered_samples,\n",
+    "    val_size=VAL_FRACTION,\n",
+    "    last_inference_only=True,\n",
     ")"
    ]
   },
@@ -344,30 +374,10 @@
     "\n",
     "    # 4) merge any consecutive roles and return\n",
     "    contents = merge_messages(rendered_msgs)\n",
-    "    result = {\"google_messages\": {\"contents\": contents}}\n",
+    "    result = {\"contents\": contents}\n",
     "    if system_instruction:\n",
-    "        result[\"google_messages\"][\"systemInstruction\"] = system_instruction\n",
-    "    # optionally keep track of episode\n",
-    "    if hasattr(inf, \"episode_id\"):\n",
-    "        result[\"episode_id\"] = inf.episode_id\n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "google_payloads = []\n",
-    "for inf in rendered_inferences:\n",
-    "    payload = inference_to_google(inf)\n",
-    "    if payload is not None:\n",
-    "        google_payloads.append(payload)\n",
-    "\n",
-    "df = pd.DataFrame(google_payloads)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Split the data into training and validation sets for fine-tuning.\n"
+    "        result.update({\"systemInstruction\": system_instruction})\n",
+    "    return result"
    ]
   },
   {
@@ -376,27 +386,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get unique episode_ids\n",
-    "unique_episode_ids = df[\"episode_id\"].unique()\n",
-    "\n",
-    "# Shuffle the unique episode_ids\n",
-    "np.random.seed(42)\n",
-    "np.random.shuffle(unique_episode_ids)\n",
-    "\n",
-    "# Calculate the split index for episode_ids\n",
-    "split_index = int(len(unique_episode_ids) * (1 - VAL_FRACTION))\n",
-    "\n",
-    "# Split the episode_ids into training and validation sets\n",
-    "train_episode_ids = unique_episode_ids[:split_index]\n",
-    "val_episode_ids = unique_episode_ids[split_index:]\n",
-    "\n",
-    "# Create training and validation DataFrames based on episode_ids\n",
-    "train_df = df[df[\"episode_id\"].isin(train_episode_ids)]\n",
-    "val_df = df[df[\"episode_id\"].isin(val_episode_ids)]\n",
-    "\n",
-    "print(f\"Training set size: {len(train_df)}\")\n",
-    "print(f\"Validation set size: {len(val_df)}\")\n",
-    "print(f\"Actual validation fraction: {len(val_df) / len(df):.2f}\")"
+    "train_data = [inference_to_google(sample) for sample in train_samples]\n",
+    "val_data = [inference_to_google(sample) for sample in val_samples]"
    ]
   },
   {
@@ -413,16 +404,16 @@
    "outputs": [],
    "source": [
     "def upload_dataset_to_gcp(\n",
-    "    df: pd.DataFrame, dataset_name: str, gcp_client: storage.Client\n",
+    "    data: List[Dict[str, Any]], dataset_name: str, gcp_client: storage.Client\n",
     ") -> str:\n",
     "    with tempfile.NamedTemporaryFile(mode=\"w\", suffix=\".jsonl\", delete=False) as f:\n",
     "        # Write the openai_messages to the temporary file\n",
-    "        for item in df[\"google_messages\"]:\n",
+    "        for item in data:\n",
     "            json.dump(item, f)\n",
     "            f.write(\"\\n\")\n",
     "        f.flush()\n",
     "\n",
-    "        bucket = gcp_client.bucket(BUCKET_NAME)\n",
+    "        bucket = gcp_client.bucket(os.environ[\"GCP_BUCKET_NAME\"])\n",
     "        if not bucket.exists():\n",
     "            bucket.storage_class = \"STANDARD\"\n",
     "            bucket = gcp_client.create_bucket(bucket, location=\"us\")\n",
@@ -439,14 +430,14 @@
     "        )\n",
     "\n",
     "\n",
-    "gcp_client = storage.Client(project=PROJECT_ID)\n",
+    "gcp_client = storage.Client(project=os.environ[\"GCP_PROJECT_ID\"])\n",
     "\n",
     "train_file_name = f\"train_{uuid7()}.jsonl\"\n",
     "val_file_name = f\"val_{uuid7()}.jsonl\"\n",
     "\n",
     "\n",
-    "upload_dataset_to_gcp(train_df, train_file_name, gcp_client)\n",
-    "upload_dataset_to_gcp(val_df, val_file_name, gcp_client)"
+    "upload_dataset_to_gcp(train_data, train_file_name, gcp_client)\n",
+    "upload_dataset_to_gcp(val_data, val_file_name, gcp_client)"
    ]
   },
   {
@@ -464,8 +455,8 @@
    "source": [
     "sft_tuning_job = sft.train(\n",
     "    source_model=MODEL_NAME,\n",
-    "    train_dataset=f\"gs://{BUCKET_NAME}/{train_file_name}\",\n",
-    "    validation_dataset=f\"gs://{BUCKET_NAME}/{val_file_name}\",\n",
+    "    train_dataset=f\"gs://{os.environ['GCP_BUCKET_NAME']}/{train_file_name}\",\n",
+    "    validation_dataset=f\"gs://{os.environ['GCP_BUCKET_NAME']}/{val_file_name}\",\n",
     ")"
    ]
   },
@@ -525,8 +516,8 @@
     "                \"gcp_vertex_gemini\": {\n",
     "                    \"type\": \"gcp_vertex_gemini\",\n",
     "                    \"endpoint_id\": fine_tuned_model,\n",
-    "                    \"location\": LOCATION,\n",
-    "                    \"project_id\": PROJECT_ID,\n",
+    "                    \"location\": os.environ[\"GCP_LOCATION\"],\n",
+    "                    \"project_id\": os.environ[\"GCP_PROJECT_ID\"],\n",
     "                }\n",
     "            },\n",
     "        }\n",
