Clean up the notebook

--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -5,7 +5,7 @@
    "id": "a00dfeb0",
    "metadata": {},
    "source": [
-    "## Example: NER + SFT + DPO"
+    "## Example: Improving Data Extraction (NER) with SFT + DPO in TensorZero"
    ]
   },
   {
@@ -332,11 +332,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d46b85e",
+   "id": "408f2268",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Include the variants in `tensorzero.toml` that we want to evaluate\n",
+    "# Update (uncomment) after each SFT and DPO\n",
     "VARIANTS_TO_EVALUATE = [\n",
     "    \"gpt_4o\",\n",
     "    \"gpt_4o_mini\",\n",
@@ -348,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "771b2b82",
+   "id": "6de0be6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec425445",
+   "id": "e39c837a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6931650",
+   "id": "329521ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,12 +467,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9058870b",
+   "id": "ad5c48f5",
    "metadata": {},
    "source": [
     "## Apply Spervised Fine-Tuning (SFT)\n",
     "\n",
-    "You can run a fine-tuning recipe by opening the UI (`http://localhost:4000/`) and clicking on the `Supervised Fine-Tuning` tab. For this example, let's run fine-tuning on GPT-40 Mini (`gpt_4.1-mini-2025-04-14`) with OpenAI using the `exact_match` metric. This process may take some time.\n",
+    "At this point, your ClickHouse database will include inferences in a structured format along with feedback on they they went. You can use TensorZero recipes to produce better variants of the NER system.\n",
+    "For this example, we'll apply a fine-tuning (SFT) recipe by opening the UI (`http://localhost:4000/`) and clicking on the `Supervised Fine-Tuning` tab. Let's run fine-tuning on GPT-40 Mini (`gpt_4.1-mini-2025-04-14`) with OpenAI using the `exact_match` metric. This process may take some time.\n",
     "\n",
     "Once you finish fine-tuning, you'll see additional configuration blocks. For this example, we only need the `model_name` which we'll use to create a new variant in the `tensorzero.toml` file.   \n",
     "\n",
@@ -484,12 +486,15 @@
     "json_mode = \"strict\"\n",
     "```\n",
     "\n",
-    "Restart the TensorZero Gateway to apply the new configuration. You can do this by killing the running container and re-running `docker compose up`."
+    "**Restart the TensorZero Gateway to apply the new configuration.** You can do this by killing the running container and re-running `docker compose up`.\n",
+    "\n",
+    "To see the new variant for SFT, uncomment `#\"gpt_4o_mini_sft_fine_tuned\",` in the VARIANTS_TO_EVALUATE, then re-run the `ner-sft-dpo.ipynb` notebook (run only the NER part, just before this section `Apply Supervised Fine-Tuning`).\n",
+    "You'll see the fine-tuned GPT-40 Mini outperforms GPT-40 on this task."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3c263185",
+   "id": "12cd67fd",
    "metadata": {},
    "source": [
     "## Apply Preference Fine-Tuning (DPO)"
@@ -497,10 +502,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2aab315",
+   "id": "805e569a",
    "metadata": {},
    "source": [
-    "Once you apply the new configuration, you can use the model to apply DPO on top of it to improve further. We'll run the DPO programmatically using the the recipe in `recipes/dpo/openai`. \n",
+    "Once you apply the new configuration and get the SFT model, you can use the model to apply DPO on top of it to improve further. For this example, we'll run the DPO programmatically using the the recipe in `recipes/dpo/openai`. \n",
     "\n",
     "Set `TENSORZERO_CLICKHOUSE_URL=http://chuser:chpassword@localhost:8123/tensorzero` in the shell your notebook will run in."
    ]
@@ -508,25 +513,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "703152d9",
+   "id": "f490a580",
    "metadata": {},
    "outputs": [],
    "source": [
     "CONFIG_PATH = \"config/tensorzero.toml\"\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
     "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"\n",
-    "MODEL_NAME = \"ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\"  # Replace this with your model to apply DPO on top of SFT\n",
+    "MODEL_NAME = \"ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\"  # Replace this with your SFT model to apply DPO\n",
     "VAL_FRACTION = 0.2\n",
-    "MAX_SAMPLES = 500\n",
-    "\n",
-    "# assert \"OPENAI_API_KEY\" in os.environ\n",
-    "# assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ"
+    "MAX_SAMPLES = 500"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc2f7e0",
+   "id": "db436f47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d242a6a5",
+   "id": "45ab686f",
    "metadata": {},
    "source": [
     "Ensure that the function and variant being fine-tuned are present in the provided config."
@@ -550,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c1c9447",
+   "id": "da151765",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d01cc42",
+   "id": "567c5e29",
    "metadata": {},
    "source": [
     "Retrieve the configuration for the variant with the templates we will use for fine-tuning."
@@ -574,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "247f9f86",
+   "id": "f86454ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63881094",
+   "id": "b4d87336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea28ede1",
+   "id": "7f197911",
    "metadata": {},
    "source": [
     "Initialize the ClickHouse client."
@@ -620,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d462c868",
+   "id": "acef728d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9052e80",
+   "id": "72ac44e6",
    "metadata": {},
    "source": [
     "Determine the ClickHouse table name for the function."
@@ -642,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec0d77e",
+   "id": "f393a230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9663f9e9",
+   "id": "5f70fac4",
    "metadata": {},
    "source": [
     "Query ClickHouse for inference, feedback, and metric."
@@ -663,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f453bac2",
+   "id": "9357b570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,16 +694,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62d65aba",
+   "id": "fa49a11b",
    "metadata": {},
    "source": [
-    "render message\n"
+    "Format a reqired structure for DPO."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7154792",
+   "id": "6d153a2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611af61c",
+   "id": "cee3427f",
    "metadata": {},
    "source": [
     "Split data into training and validation sets for fine-tuning"
@@ -884,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf1208fb",
+   "id": "1b52b634",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,16 +915,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a41216e0",
+   "id": "02915f05",
    "metadata": {},
    "source": [
-    "Upload the preared datasets to OpenAI"
+    "Upload the prepared datasets to OpenAI"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5843a5c2",
+   "id": "89dfad9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,16 +951,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f70a2456",
+   "id": "d4de7fd4",
    "metadata": {},
    "source": [
-    "Launch the fine-tuning job and wait for it to complete."
+    "Launch the fine-tuning job and wait for it to complete \n",
+    "\n",
+    "> **NOTE:** This step takes a while"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a00fde9",
+   "id": "abe0dd6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,16 +996,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abe01ba2",
+   "id": "37d12970",
    "metadata": {},
    "source": [
-    "TODO: Adding the fine-tuned model to the config file"
+    "Once the fine-tuning job is complete, you can see the configuration by running the code below. For this example, we'll only need the `model_name` which we'll use to create a new variant in the `tensorzero.toml`, just like what we did for SFT earlier.\n",
+    "\n",
+    "```toml\n",
+    "[models.\"ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\"]\n",
+    "routing = [ \"openai\",]\n",
+    "\n",
+    "[models.\"ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\".providers.openai]\n",
+    "type = \"openai\"\n",
+    "model_name = \"ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\" \n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98d707e",
+   "id": "4d6b82b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,41 +1033,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4ba9979",
+   "id": "d2aacba2",
    "metadata": {},
    "source": [
-    "TODO: Adding a new variant to your function to use the fine-tuned model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3576241",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variant_config = {\n",
-    "    \"type\": \"chat_completion\",\n",
-    "    \"model\": fine_tuned_model,\n",
-    "}\n",
+    "**Let's restart the TensorZero Gateway to apply the new configuration again** by killing the running container and re-running `docker compose up`.\n",
     "\n",
-    "system_template = variant.get(\"system_template\")\n",
-    "if system_template:\n",
-    "    variant_config[\"system_template\"] = system_template\n",
-    "\n",
-    "user_template = variant.get(\"user_template\")\n",
-    "if user_template:\n",
-    "    variant_config[\"user_template\"] = user_template\n",
-    "\n",
-    "assistant_template = variant.get(\"assistant_template\")\n",
-    "if assistant_template:\n",
-    "    variant_config[\"assistant_template\"] = assistant_template\n",
-    "\n",
-    "full_variant_config = {\n",
-    "    \"functions\": {FUNCTION_NAME: {\"variants\": {fine_tuned_model: variant_config}}}\n",
-    "}\n",
-    "\n",
-    "print(toml.dumps(full_variant_config))"
+    "To see the new variant for DPO, uncomment `#\"gpt_4o_mini_sft_dpo_fine_tuned\",` in the VARIANTS_TO_EVALUATE, then re-run the `ner-sft-dpo.ipynb` notebook (run only the NER part, just before the section `Apply Supervised Fine-Tuning`)."
    ]
   }
  ],
