update mipro notebook

--- a/recipes/mipro/mipro.ipynb
+++ b/recipes/mipro/mipro.ipynb
@@ -175,13 +175,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "99c29237",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "tensorzero_path = os.path.abspath(os.path.join(os.getcwd(), \"../../\"))\n",
+    "if tensorzero_path not in sys.path:\n",
+    "    sys.path.append(tensorzero_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "67219775",
    "metadata": {},
    "outputs": [],
    "source": [
     "import asyncio\n",
     "import json\n",
-    "import os\n",
     "from random import shuffle\n",
     "from typing import Any, Dict, List, Optional, Tuple\n",
     "\n",
@@ -200,7 +214,9 @@
     "    Text,\n",
     ")\n",
     "from tqdm.asyncio import tqdm_asyncio\n",
-    "from utils.client_calls import candidate_inference, get_instructions, judge_answer"
+    "from utils.client_calls import candidate_inference, get_instructions, judge_answer\n",
+    "\n",
+    "from recipes.util import train_val_split"
    ]
   },
   {
@@ -279,7 +295,7 @@
     "base_variant = base_function.variants[TEMPLATE_VARIANT_NAME]\n",
     "if not isinstance(base_variant, ChatCompletionConfig):\n",
     "    raise ValueError(\"Only chat completion variants are supported\")\n",
-    "model_name = base_variant.model_name"
+    "model_name = base_variant.model"
    ]
   },
   {
@@ -306,9 +322,7 @@
     "    # metric_name=\"jaccard_similarity\",\n",
     "    # value=0.5,\n",
     "    # comparison_operator=\">\",\n",
-    ")\n",
-    "\n",
-    "print(inferences)"
+    ")"
    ]
   },
   {
@@ -321,6 +335,28 @@
     "rendered_samples = await original_client.experimental_render_samples(\n",
     "    stored_samples=inferences,\n",
     "    variants={FUNCTION_NAME: TEMPLATE_VARIANT_NAME},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9565f4fa",
+   "metadata": {},
+   "source": [
+    "Split the data into training and validation sets for fine-tuning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85b6b6e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_samples, val_samples = train_val_split(\n",
+    "    rendered_samples,\n",
+    "    val_size=EVAL_FRACTION,\n",
+    "    last_inference_only=True,\n",
     ")"
    ]
   },
@@ -466,32 +502,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get unique episode_ids\n",
-    "unique_episode_ids = list(set(sample.episode_id for sample in rendered_samples))\n",
-    "\n",
-    "# Shuffle the unique episode_ids\n",
-    "np.random.seed(42)\n",
-    "np.random.shuffle(unique_episode_ids)\n",
-    "\n",
-    "# Calculate the split index for episode_ids\n",
-    "split_index = int(len(unique_episode_ids) * (1 - EVAL_FRACTION))\n",
-    "\n",
-    "# Split the episode_ids into training and validation sets\n",
-    "train_episode_ids = unique_episode_ids[:split_index]\n",
-    "val_episode_ids = unique_episode_ids[split_index:]\n",
-    "\n",
     "# Create training and validation DataFrames based on episode_ids\n",
-    "train_examples = []\n",
-    "val_examples = []\n",
-    "for example in rendered_samples:\n",
-    "    if example.episode_id in train_episode_ids:\n",
-    "        train_examples.append((sample_to_openai_messages(example), example))\n",
-    "    else:\n",
-    "        val_examples.append((sample_to_openai_messages(example), example))\n",
-    "\n",
-    "print(f\"Training set size: {len(train_examples)}\")\n",
-    "print(f\"Validation set size: {len(val_examples)}\")\n",
-    "print(f\"Actual validation fraction: {len(val_examples) / len(rendered_samples):.2f}\")"
+    "train_examples = [\n",
+    "    (sample_to_openai_messages(example), example) for example in train_samples\n",
+    "]\n",
+    "val_examples = [\n",
+    "    (sample_to_openai_messages(example), example) for example in val_samples\n",
+    "]"
    ]
   },
   {
