--- a/examples/multimodal-vision-finetuning/main.ipynb
+++ b/examples/multimodal-vision-finetuning/main.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "CONCURRENCY = 10\n",
     "\n",
-    "VARIANT_NAME = \"finetuned\""
+    "VARIANT_NAME = \"baseline\""
    ]
   },
   {
