Add model provider guides

--- a/docs/gateway/guides/providers/aws-bedrock.mdx
+++ b/docs/gateway/guides/providers/aws-bedrock.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with AWS Bedrock
+sidebarTitle: AWS Bedrock
 description: "Learn how to use TensorZero with AWS Bedrock LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
