--- a/docs/gateway/guides/providers/aws-sagemaker.mdx
+++ b/docs/gateway/guides/providers/aws-sagemaker.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with AWS SageMaker
+sidebarTitle: AWS SageMaker
 description: "Learn how to use TensorZero with AWS SageMaker LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
