--- a/docs/gateway/guides/providers/azure.mdx
+++ b/docs/gateway/guides/providers/azure.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with Azure OpenAI Service
+sidebarTitle: Azure
 description: "Learn how to use TensorZero with Azure OpenAI Service LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
