--- a/docs/gateway/guides/providers/deepseek.mdx
+++ b/docs/gateway/guides/providers/deepseek.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with DeepSeek
+sidebarTitle: DeepSeek
 description: "Learn how to use TensorZero with DeepSeek LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
