--- a/docs/gateway/guides/providers/fireworks.mdx
+++ b/docs/gateway/guides/providers/fireworks.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with Fireworks AI
+sidebarTitle: Fireworks
 description: "Learn how to use TensorZero with Fireworks AI LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
