--- a/docs/gateway/guides/providers/google-ai-studio-gemini.mdx
+++ b/docs/gateway/guides/providers/google-ai-studio-gemini.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with Google AI Studio (Gemini API)
+sidebarTitle: Google AI Studio
 description: "Learn how to use TensorZero with Google AI Studio LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
