--- a/docs/gateway/guides/providers/groq.mdx
+++ b/docs/gateway/guides/providers/groq.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with Groq
+sidebarTitle: Groq
 description: "Learn how to use TensorZero with Groq LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
