--- a/docs/gateway/guides/providers/openai-compatible.mdx
+++ b/docs/gateway/guides/providers/openai-compatible.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with OpenAI-Compatible Endpoints (e.g. Ollama)
+sidebarTitle: OpenAI-Compatible
 description: "Learn how to use TensorZero with OpenAI-compatible LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
