--- a/docs/gateway/guides/providers/openai.mdx
+++ b/docs/gateway/guides/providers/openai.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with OpenAI
+sidebarTitle: OpenAI
 description: "Learn how to use TensorZero with OpenAI LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
