--- a/docs/gateway/guides/providers/openrouter.mdx
+++ b/docs/gateway/guides/providers/openrouter.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with OpenRouter
+sidebarTitle: OpenRouter
 description: "Learn how to use TensorZero with OpenRouter LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
