--- a/docs/gateway/guides/providers/tgi.mdx
+++ b/docs/gateway/guides/providers/tgi.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with Text Generation Inference (TGI)
+sidebarTitle: TGI
 description: "Learn how to use TensorZero with self-hosted HuggingFace TGI LLMs: open-source gateway, observability, optimization, evaluations, experimentation."
 ---
 
