--- a/docs/gateway/guides/providers/together.mdx
+++ b/docs/gateway/guides/providers/together.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with Together AI
+sidebarTitle: Together
 description: "Learn how to use TensorZero with Together AI LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
