--- a/docs/gateway/guides/providers/vllm.mdx
+++ b/docs/gateway/guides/providers/vllm.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with vLLM
+sidebarTitle: vLLM
 description: "Learn how to use TensorZero with self-hosted vLLM LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
