--- a/docs/gateway/guides/providers/xai.mdx
+++ b/docs/gateway/guides/providers/xai.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with xAI (Grok)
+sidebarTitle: xAI
 description: "Learn how to use TensorZero with xAI (Grok) LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
