--- a/docs/gateway/guides/providers/hyperbolic.mdx
+++ b/docs/gateway/guides/providers/hyperbolic.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with Hyperbolic
+sidebarTitle: Hyperbolic
 description: "Learn how to use TensorZero with Hyperbolic LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
