--- a/docs/gateway/guides/providers/mistral.mdx
+++ b/docs/gateway/guides/providers/mistral.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with Mistral
+sidebarTitle: Mistral
 description: "Learn how to use TensorZero with Mistral LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
