--- a/docs/gateway/guides/providers/sglang.mdx
+++ b/docs/gateway/guides/providers/sglang.mdx
@@ -1,5 +1,6 @@
 ---
 title: Getting Started with SGLang
+sidebarTitle: SGLang
 description: "Learn how to use TensorZero with self-hosted SGLang LLMs: open-source gateway, observability, optimization, evaluations, and experimentation."
 ---
 
