--- a/docs/_edits/guides_/advanced/tutorial.mdx
+++ b/docs/_edits/guides_/advanced/tutorial.mdx
@@ -953,11 +953,11 @@ FeedbackResponse(feedback_id='019409dd-362c-7f13-ba81-bcb272b90575')
 </Tab>
 <Tab title="Python (OpenAI)">
 
-:::caution
+<Warning>
 
 The OpenAI client only supports inference, so you need to use the TensorZero client (or HTTP) to submit feedback.
 
-:::
+</Warning>
 
 </Tab>
 <Tab title="HTTP">
@@ -1841,11 +1841,11 @@ FeedbackResponse(feedback_id='01940b67-cdcd-7583-930a-0c796f1a7fd3')
 </Tab>
 <Tab title="Python (OpenAI)">
 
-:::caution
+<Warning>
 
 The OpenAI client only supports inference, so you need to use the TensorZero client (or HTTP) to submit feedback.
 
-:::
+</Warning>
 
 </Tab>
 <Tab title="HTTP">
