--- a/docs/gateway/deployment.mdx
+++ b/docs/gateway/deployment.mdx
@@ -42,7 +42,7 @@ Other options for managed ClickHouse deployments include <a href="https://www.ti
 
 You can alternatively run your own self-managed ClickHouse instance or cluster.
 
-:::caution
+<Warning>
 
 The TensorZero Gateway does _not_ automatically enable data replication for ClickHouse tables.
 
@@ -51,7 +51,7 @@ See the ClickHouse [replication documentation](https://clickhouse.com/docs/en/en
 
 ClickHouse Cloud automatically sets up data replication, so this step is not necessary if you're using the managed service.
 
-:::
+</Warning>
 
 ### Configuration
 
