--- a/docs/gateway/guides/tool-use.mdx
+++ b/docs/gateway/guides/tool-use.mdx
@@ -18,12 +18,12 @@ See [Integrations](/docs/gateway/integrations/) for a list of supported model pr
 You can define a tool in your configuration file and attach it to a TensorZero function that should be allowed to call it.
 Alternatively, you can define a tool dynamically at inference time.
 
-:::caution
+<Warning>
 
 The term "tool use" is also commonly referred to as "function calling" in the industry.
 In TensorZero, the term "function" refers to TensorZero functions, so we'll stick to the "tool" terminology for external tools that the models can interact with and "function" for TensorZero functions.
 
-:::
+</Warning>
 
 <Tip>
 
