--- a/docs/gateway/api-reference/inference.mdx
+++ b/docs/gateway/api-reference/inference.mdx
@@ -382,13 +382,13 @@ For example, the following hypothetical unknown content block will send the `day
 }
 ```
 
-:::caution
+<Warning>
 
 Certain reasoning models (e.g. DeepSeek R1) can include `thought` content blocks in the response.
 These content blocks can't directly be used as inputs to subsequent inferences in multi-turn scenarios.
 If you need to provide `thought` content blocks to a model, you should convert them to `text` content blocks.
 
-:::
+</Warning>
 
 This is the most complex field in the entire API. See this example for more details.
 
@@ -559,11 +559,11 @@ Then:
 - `model_name="gpt-4o"` calls the `gpt-4o` model in your configuration, which supports fallback from `openai` to `azure`. See [Retries & Fallbacks](/docs/gateway/guides/retries-fallbacks/) for details.
 - `model_name="openai::gpt-4o"` calls the OpenAI API directly for the `gpt-4o` model, ignoring the `gpt-4o` model defined above.
 
-:::caution
+<Warning>
 
 Be careful about the different prefixes: `model_name="gpt-4o"` will use the `[models.gpt-4o]` model defined in the `tensorzero.toml` file, whereas `model_name="openai::gpt-4o"` will call the OpenAI API directly for the `gpt-4o` model.
 
-:::
+</Warning>
 
 #### `output_schema`
 
